<?xml version="1.0" encoding="utf-8"?>

<!-- Layout of the Manga Activity : description of a manga and list of its tomes -->
<!-- I used the singleLine because at the moment there is nothing to replace correctly this option. It
  is depreciated but we can use again until Android will find a good solution-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/mangaTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:textSize="35sp"
        android:text="@string/manga_title"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:freezesText="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/Editlrl1"
        android:layout_below="@+id/editBut"
        android:foregroundGravity="center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TableLayout
            android:id="@+id/tableVolume"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:shrinkColumns="*"
            android:isScrollContainer="true">

        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/Editlrl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Editlrl2">

        <EditText
            android:id="@+id/text_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:hint="@string/manga_hint_author"
            />

        <EditText
            android:id="@+id/text_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:hint="@string/manga_hint_category"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Editlrl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mangaOk">

        <EditText
            android:id="@+id/text_editor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:hint="@string/manga_hint_editor"/>

        <EditText
            android:id="@+id/text_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:hint="@string/manga_hint_price"/>
    </LinearLayout>


    <ImageButton
        android:id="@+id/editBut"
        android:contentDescription="@string/manga_edition"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/button_shape_state_hc_right"
        app:srcCompat="@drawable/edit_icon"
        android:layout_below="@+id/mangaTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:id="@+id/mangaOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="#FF6600"
        android:background="@drawable/button_shape_state"
        android:textSize="30sp"
        android:text="@string/manga_ok" />


    <Button
        android:id="@+id/cancelEditBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editBut"
        android:layout_alignStart="@+id/editBut"
        android:layout_alignTop="@+id/mangaOk"
        android:text="@string/manga_cancel"
        android:textColor="#FF6600"
        android:background="@drawable/button_shape_state"
        android:visibility="invisible" />

    <Button
        android:id="@+id/valEditBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Editlrl2"
        android:text="@string/manga_validate"
        android:textColor="#FF6600"
        android:background="@drawable/button_shape_state"
        android:visibility="invisible" />

</RelativeLayout>