<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mangarelease.adam.projectmangarelease.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_app_main"
        android:textSize="40dp"
        android:id="@+id/titleAppMain"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/releaseButMain"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_but_main"
        android:id="@+id/releaseButMain"
        android:height="80dp"
        android:width="180dp"
        android:layout_marginBottom="33dp"
        android:layout_above="@+id/libraryButMain"
        android:layout_alignLeft="@+id/libraryButMain"
        android:layout_alignStart="@+id/libraryButMain" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_but_main"
        android:id="@+id/libraryButMain"
        android:width="180dp"
        android:height="80dp"
        android:layout_marginBottom="38dp"
        android:layout_above="@+id/quitButMain"
        android:layout_alignLeft="@+id/quitButMain"
        android:layout_alignStart="@+id/quitButMain" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_but_main"
        android:id="@+id/quitButMain"
        android:width="180dp"
        android:height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />

</RelativeLayout>