<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mangarelease.adam.projectmangarelease.LibraryActivity"
    >

    <RelativeLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/libTitle"
            android:text="@string/title_library"
            android:textSize="38dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            />
    </RelativeLayout>



    <ListView
        android:divider="@null"
        android:dividerHeight="0dp"
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@+id/layoutTitle"
        android:layout_above="@+id/linearLib">
    </ListView>


    <RelativeLayout
        android:id="@+id/linearLib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/validateButLib"
            android:text="@string/validate_but_lib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/returnButLib"
            android:text="@string/return_but_lib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

</RelativeLayout>
