<!-- Layout of the Release Activity : filter search Main content of the new releases -->

<com.mangarelease.adam.projectmangarelease.NewReleaseSource.FilterSearchSource.SlidingLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- This holds our menu -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--android:layout_height=?attr/actionBarSize-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/filterTitle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/title_filter"
                android:textSize="40dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ExpandableListView
                    android:id="@+id/expandableList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/validateButRel"
                    android:layout_below="@+id/filterTitle">

                </ExpandableListView>


                <Button
                    android:id="@+id/validateButRel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/validate_but_rel" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>


    <!-- This holds our content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:onClick="toggleMenu"
                android:src="@drawable/menu" />

            <TextView
                android:id="@+id/titleRelease"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/title_release"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.Toolbar>


        <!-- Fragments container layout -->
        <FrameLayout
            android:id="@+id/release_fragment_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></FrameLayout>


    </LinearLayout>

</com.mangarelease.adam.projectmangarelease.NewReleaseSource.FilterSearchSource.SlidingLayout>